fixed small spacing issue

--- a/src/style/aboutStyles/aboutContacts.scss
+++ b/src/style/aboutStyles/aboutContacts.scss
@@ -35,6 +35,7 @@
 .contacts-card-container {
   display: flex;
   flex-direction: column;
+  gap: $spacing-xl;
   @media (min-width: $breakpoint-md) {
     flex-direction: row;
     justify-content: center;
